--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div class="container">
+        <IMG style="max-height:30%;display: block; margin-left: auto; margin-right: auto; width:40%;" SRC ="tamagotchi.jpg">
       <%= yield %>
     </div>
   </body>
