--- a/views/main.erb
+++ b/views/main.erb
@@ -1,12 +1,24 @@
 <div class="container">
   <div class="row">
     <div class="col-4">
-    <IMG style="max-height:30%;display: block; margin-left: auto; margin-right: auto; width:40%;" SRC ="tamagotchi.jpg">
     <h1>Virtual Tamagotchi<h1>
-      <button type="button" name="Feed" id="feed" class="btn btn-primary" btn-lg btn-block">Feed Your Tamagotchi</button>
-      <button type="button" name="Nap" id="nap" class="btn btn-primary" btn-lg btn-block">Give Your Tamagotchi a Nap</button>
-      <button type="button" name="Play" id="play" class="btn btn-primary" btn-lg btn-block">Play With Your Tamagotchi</button>
-      <button type="button" name="Jump" id="jump" class="btn btn-primary" btn-lg btn-block">Jump Forward a day</button>
+  <input name="_method" type="hidden" value="delete">
+  <form action="/feed" method="get">
+  <input name="_method" type="hidden" value="delete">
+      <button type="submit" name="Feed" id="feed" class="btn btn-primary" btn-lg btn-block">Feed Your Tamagotchi</button>
+</form>
+  <form action="/nap" method="get">
+  <input name="_method" type="hidden" value="delete">
+      <button type="submit" name="Nap" id="nap" class="btn btn-primary" btn-lg btn-block">Give Your Tamagotchi a Nap</button>
+  </form>
+    <form action="/play" method="get">
+  <input name="_method" type="hidden" value="delete">
+      <button type="submit" name="Play" id="play" class="btn btn-primary" btn-lg btn-block">Play With Your Tamagotchi</button>
+    </form>
+      <form action="/dayplus" method="get">
+  <input name="_method" type="hidden" value="delete">
+      <button type="submit" name="Jump" id="jump" class="btn btn-primary" btn-lg btn-block">Jump Forward a day</button>
+      </form>
       </div>
       <h3 class='display-2'>Name your tamagotchi</h3><form class="form-inline">
         <form>
